@@ -3,13 +3,6 @@ TODO:
 :install:
 
 :rdup:
-o encrypted file names, is it worth the effort, needs to be done in
-  rdup-snap, when reading a name mangle it with a key? (low prio)
-  I think you can only hash the names
-o extended attributes support? How, both OS agnostic and with remote
-  dumping?
-o se linux support? See extended attributes
-o generic extended attributes. Locally we can use gnu cp 
-  - extended attributes are a todo. I would love to see this supported on
-   a generic non-FS depended way and workable with remote dumps.
-o cleanup rdup.1 and rdup-backups.1 to drop the refs to the rdup-scripts
+
+:doc:
+fix up the caveat section of the rdup.1 page
