@@ -1,4 +1,8 @@
 xx Dec 2008: 0.6.4 Miek <miek@miek.nl>
+ * Added '%N' to the format string, which prints the
+   path, but in case of soft- and hardlinks it will only
+   print the link's name not the '-> target'
+
 
 07 Nov 2008: 0.6.3 Miek <miek@miek.nl>
  * make regular expressions actually work (patch from Crispin Boylan)
